# HumanGL

./: .gitignore  CMakeLists.txt  README.md  make.sh  run.sh
include/: keybindings.hpp  main.hpp  test.hpp
include/animations/: Animation.hpp
include/body-parts/: Axis.hpp  BodyPart.hpp  Human.hpp
include/camera/: Camera.hpp
include/defines/: BodyPartDefines.hpp  CameraDefines.hpp  HumanDefines.hpp  MathsDefines.hpp  WindowDefines.hpp
include/exceptions/: ShaderException.hpp
include/geometry/: Point2.hpp  Point3.hpp  Triangle.hpp
include/geometry/utils/: crossProduct.hpp  isPointInTriangle.hpp  triangulatePolygon.hpp
include/managers/: AnimationManager.hpp  BufferManager.hpp  ShaderManager.hpp
include/maths/matrices/: Matrix4.hpp  MatrixStack.hpp
include/maths/vectors/: Vector4.hpp
include/render/: Color.hpp  Point2.hpp  Point3.hpp  Renderer.hpp
include/utils/: Logger.hpp
src/: keybindings.cpp  main.cpp  test.cpp
src/animations/: Animation.cpp
src/body-parts/: Axis.cpp  BodyPart.cpp  Human.cpp
src/camera/: Camera.cpp
src/geometry/: Point2.cpp  Point3.cpp
src/geometry/utils/: crossProduct.cpp  isPointInTriangle.cpp  triangulatePolygon.cpp
src/managers/: AnimationManager.cpp  BufferManager.cpp  ShaderManager.cpp
src/maths/matrices/: Matrix4.cpp  MatrixStack.cpp
src/maths/vectors/: Vector4.cpp
src/render/: Color.cpp  Color.hpp  Point2.cpp  Point2.hpp  Point3.cpp  Point3.hpp  Renderer.cpp
src/shaders/: fragShader.frag  fragmentShader.glsl  geometryShader.geom  vertexShader.glsl  vertexShader.vert
src/utils/: Logger.cpp
